--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -118,6 +118,19 @@
         </dependency>-->
    <!--GwtEvent Service Dependency (server Push event) { -->
    
+   <!-- Apache POI for excel export -->
+	    
+	          <dependency>
+	<groupId>org.apache.poi</groupId>
+	<artifactId>poi</artifactId>
+	<version>3.9</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>3.9</version>
+</dependency>
+<!-- Apache POI for excel export -->
     <dependency>
 		<groupId>de.novanic.gwteventservice</groupId>
 		<artifactId>gwteventservice</artifactId>
@@ -179,11 +192,11 @@
         </dependency>
         
          <!-- Dependency for POI for Excel import -->
-        <dependency>
+       <!--  <dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
 			<version>3.2-FINAL</version>
-		</dependency>
+		</dependency> -->
 		
 		<!--  Dependency for Amazon S3 -->
     	  
@@ -636,12 +649,12 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <argLine>-Xmx8196m</argLine>
+                    <argLine>-Xmx4026m</argLine>
                     <source>1.6</source>
                     <target>1.6</target>
                     <encoding>UTF-8</encoding>
                     <meminitial>2048m</meminitial>
-                    <maxmem>8192m</maxmem>
+                    <maxmem>4022m</maxmem>
                 </configuration>
             </plugin>
             <plugin>
@@ -671,7 +684,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <argLine>-Xmx8196m</argLine>
+                    <argLine>-Xmx4196m</argLine>
                     <outxml>true</outxml>
                     <aspectLibraries>
                         <aspectLibrary>
@@ -682,7 +695,7 @@
                     <source>1.6</source>
                     <target>1.6</target>
                     <meminitial>2048m</meminitial>
-                    <maxmem>8192m</maxmem>
+                    <maxmem>4192m</maxmem>
                 </configuration>
             </plugin>
             <plugin>
@@ -690,10 +703,10 @@
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.5</version>
                 <configuration>
-                    <argLine>-Xmx8196m</argLine>
+                    <argLine>-Xmx4196m</argLine>
                     <encoding>UTF-8</encoding>
                     <meminitial>2048m</meminitial>
-                    <maxmem>8192m</maxmem>
+                    <maxmem>4192m</maxmem>
                 </configuration>
             </plugin>
             <plugin>
@@ -701,14 +714,14 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.8</version>
                 <configuration>
-                    <argLine>-Xmx8196m</argLine>
+                    <argLine>-Xmx4196m</argLine>
                     <printSummary>false</printSummary>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <excludes>
                         <exclude>**/*_Roo_*</exclude>
                     </excludes>
                     <meminitial>2048m</meminitial>
-                    <maxmem>8192m</maxmem>
+                    <maxmem>4192m</maxmem>
                 </configuration>
             </plugin>
             <plugin>
@@ -716,12 +729,12 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.2.1</version>
                 <configuration>
-                    <argLine>-Xmx8196m</argLine>
+                    <argLine>-Xmx4196m</argLine>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                     <meminitial>2048m</meminitial>
-                    <maxmem>8192m</maxmem>
+                    <maxmem>4192m</maxmem>
                 </configuration>
             </plugin>
             <plugin>
@@ -736,9 +749,9 @@
                 <version>2.7</version>
                 <!-- Note 2.8 does not work with AspectJ aspect path -->
                 <configuration>
-                    <argLine>-Xmx8196m</argLine>
+                    <argLine>-Xmx4196m</argLine>
                     <meminitial>2048m</meminitial>
-                    <maxmem>8192m</maxmem>
+                    <maxmem>4192m</maxmem>
                     <downloadSources>true</downloadSources>
                     <downloadJavadocs>false</downloadJavadocs>
                     <wtpversion>2.0</wtpversion>
@@ -769,9 +782,9 @@
                 <artifactId>maven-idea-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <argLine>-Xmx8196m</argLine>
+                    <argLine>-Xmx4196m</argLine>
                     <meminitial>2048m</meminitial>
-                    <maxmem>8192m</maxmem>
+                    <maxmem>4192m</maxmem>
                     <downloadSources>true</downloadSources>
                     <dependenciesAsLibraries>true</dependenciesAsLibraries>
                 </configuration>
@@ -786,9 +799,9 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>7.4.2.v20110526</version>
                 <configuration>
-                    <argLine>-Xmx8196m</argLine>
+                    <argLine>-Xmx4196m</argLine>
                     <meminitial>2048m</meminitial>
-                    <maxmem>8192m</maxmem>
+                    <maxmem>4192m</maxmem>
                     <webAppSourceDirectory>${jetty.app.path}</webAppSourceDirectory>
                     <webAppConfig>
                         <contextPath>/${project.name}</contextPath>
@@ -803,19 +816,15 @@
                 <configuration>
                     <logLevel>INFO</logLevel>
                     <style>PRETTY</style>
-                    <runTarget>/OsMaEntry.html</runTarget>
+                    <runTarget>/ApplicationScaffold.html</runTarget>
                     <hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
                     <modules>
-                        <module>${project.groupId}.OsMaEntry</module>
+                        <module>${project.groupId}.ApplicationScaffold</module>
                     </modules>
                     <copyWebapp>true</copyWebapp>
-			<extraJvmArgs>-Xms4g -Xmx16g</extraJvmArgs>
                 </configuration>
                 <executions>
                     <execution>
-                    	<configuration>
-							<extraJvmArgs>-Xmx10G</extraJvmArgs>
-						</configuration>                    	
                         <id>gwtcompile</id>
                         <phase>prepare-package</phase>
                         <goals>
