--- a/OsceManager/src/main/resources/META-INF/spring/smtp.properties
+++ b/OsceManager/src/main/resources/META-INF/spring/smtp.properties
@@ -1,3 +1,11 @@
 smtp.host=smtp.gmail.com
 smtp.username=username
 smtp.password=password
+smtp.protocol=smtp
+smtp.port=25
+smtp.auth=true
+smtp.starttls.enable=true
+smtp.debug=true
+from.mail.id=simulationspatienten-hmed@unibas.ch
+from.name=Simulationspatientenprogramm Universität Basel
+mail.default.subject=Invitaion from OSCE
