Solved osce hang issue and logging user activity.

--- a/OsceManager/src/main/resources/log4j.properties
+++ b/OsceManager/src/main/resources/log4j.properties
@@ -7,10 +7,19 @@ log4j.appender.R.MaxFileSize=100KB
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.MaxBackupIndex=1
 log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
-log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c - %m - %X{userName}%n
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.R=org.apache.log4j.RollingFileAppender
-
+###useractivity
+log4j.appender.userActivity=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.userActivity.File=${catalina.base}/logs/osce_user_activity.log
+log4j.appender.userActivity.Append=true
+log4j.appender.userActivity.Encoding=UTF-8
+log4j.appender.userActivity.DatePattern='.'yyyy-MM-dd
+log4j.appender.userActivity.layout=org.apache.log4j.PatternLayout
+log4j.appender.userActivity.layout.ConversionPattern=%d %m - %X{userName}%n
+log4j.category.ch.unibas.medizin.osce.server.util.security=DEBUG, userActivity
+log4j.additivity.ch.unibas.medizin.osce.server.util.security=false
 
 
 #log4j.logger.org.hibernate=INFO, hb
