--- a/OsceManager/src/main/resources/META-INF/spring/database.properties
+++ b/OsceManager/src/main/resources/META-INF/spring/database.properties
@@ -4,3 +4,7 @@ database.password=
 database.url=jdbc\:mysql\://localhost\:3306/osce
 database.username=root
 database.driverClassName=com.mysql.jdbc.Driver
+spportal.database.password=
+spportal.database.url=jdbc\:mysql\://localhost\:3306/spportal
+spportal.database.username=root
+spportal.database.driverClassName=com.mysql.jdbc.Driver
