--- a/OsceManager/src/main/webapp/WEB-INF/web.xml
+++ b/OsceManager/src/main/webapp/WEB-INF/web.xml
@@ -59,7 +59,19 @@
     <filter>
         <filter-name>Spring OpenEntityManagerInViewFilter</filter-name>
         <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
+        <init-param>
+            <param-name>entityManagerFactoryBeanName</param-name>
+            <param-value>entityManagerFactory</param-value>
+      </init-param>
     </filter>
+    <filter>
+      <filter-name>Spring OpenEntityManagerInViewFilter2</filter-name>
+      <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
+      <init-param>
+            <param-name>entityManagerFactoryBeanName</param-name>
+            <param-value>spportalEntityManagerFactory</param-value>
+      </init-param>
+</filter>
     
     <!-- For Authorization -->
     <!-- Uncomment for production mode 
@@ -81,6 +93,11 @@
     
     <filter-mapping>
         <filter-name>Spring OpenEntityManagerInViewFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    
+    <filter-mapping>
+        <filter-name>Spring OpenEntityManagerInViewFilter2</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     
