--- a/OsceManager/src/main/resources/META-INF/spring/smtp.properties
+++ b/OsceManager/src/main/resources/META-INF/spring/smtp.properties
@@ -1,11 +1,13 @@
-smtp.host=smtp.gmail.com
-smtp.username=username
-smtp.password=password
+smtp.host=
+smtp.username=
+smtp.password=
 smtp.protocol=smtp
-smtp.port=25
+smtp.port=587
 smtp.auth=true
 smtp.starttls.enable=true
 smtp.debug=true
-from.mail.id=simulationspatienten-hmed@unibas.ch
+from.mail.id=
 from.name=Simulationspatientenprogramm Universität Basel
 mail.default.subject=Invitaion from OSCE
+spportal.from.mail.id=
+spportal.mail.subject=Change password at sp portal
