--- a/OsceManager/src/main/resources/META-INF/spring/smtp.properties
+++ b/OsceManager/src/main/resources/META-INF/spring/smtp.properties
@@ -1,13 +1,13 @@
-smtp.host=
-smtp.username=
-smtp.password=
+smtp.host=smtp.gmail.com
+smtp.username=username
+smtp.password=password
 smtp.protocol=smtp
-smtp.port=587
+smtp.port=25
 smtp.auth=true
 smtp.starttls.enable=true
 smtp.debug=true
-from.mail.id=
+from.mail.id=simulationspatienten-hmed@unibas.ch
 from.name=Simulationspatientenprogramm Universität Basel
 mail.default.subject=Invitaion from OSCE
-spportal.from.mail.id=
+spportal.from.mail.id=simulationspatienten-hmed@unibas.ch
 spportal.mail.subject=Change password at sp portal
