sp-portal related changes

--- a/OsceManager/src/main/resources/META-INF/spring/smtp.properties
+++ b/OsceManager/src/main/resources/META-INF/spring/smtp.properties
@@ -11,3 +11,5 @@ from.name=Simulationspatientenprogramm Universität Basel
 mail.default.subject=Invitaion from OSCE
 spportal.from.mail.id=simulationspatienten-hmed@unibas.ch
 spportal.mail.subject=Change password at sp portal
+spportal.editRequestDeniedEmail.subject=Your personal data edit request is denied
+spportal.editRequestApprovedEmail.subject=Your personal data edit request is Approved
