--- a/OsceManager/src/main/resources/META-INF/spring/smtp.properties
+++ b/OsceManager/src/main/resources/META-INF/spring/smtp.properties
@@ -13,3 +13,4 @@ spportal.from.mail.id=simulationspatienten-hmed@unibas.ch
 spportal.mail.subject=Change password at sp portal
 spportal.editRequestDeniedEmail.subject=Your personal data edit request is denied
 spportal.editRequestApprovedEmail.subject=Your personal data edit request is Approved
+spportal.surveyStarted.subject=Survey Is Started For SPportal
