IOSCE-2 User can create a new recursive checklist in Role module.

--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -117,6 +117,12 @@
     </pluginRepositories>
     
     <dependencies>
+    	<!--  Dependency for SFTP File Transfer -->
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>0.1.49</version>
+		</dependency>
     
     	<!-- ftp  -->
 	    <dependency>
