--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -872,18 +872,15 @@
                 <configuration>
                     <logLevel>INFO</logLevel>
                     <style>PRETTY</style>
-                    <runTarget>/OsMaEntry.html</runTarget>
+                    <runTarget>/ApplicationScaffold.html</runTarget>
                     <hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
                     <modules>
-                        <module>${project.groupId}.OsMaEntry</module>
+                        <module>${project.groupId}.ApplicationScaffold</module>
                     </modules>
                     <copyWebapp>true</copyWebapp>
                 </configuration>
                 <executions>
                     <execution>
-                    	<configuration>
-							<extraJvmArgs>-Xmx10G</extraJvmArgs>
-						</configuration>   
                         <id>gwtcompile</id>
                         <phase>prepare-package</phase>
                         <goals>
