--- a/OsceManager/src/main/resources/META-INF/spring/smtp.properties
+++ b/OsceManager/src/main/resources/META-INF/spring/smtp.properties
@@ -14,3 +14,5 @@ spportal.mail.subject=Change password at sp portal
 spportal.editRequestDeniedEmail.subject=Your personal data edit request is denied
 spportal.editRequestApprovedEmail.subject=Your personal data edit request is Approved
 spportal.surveyStarted.subject=Survey Is Started For SPportal
+spportal.osce.demo=false
+spportal.osce.demo.mail.id=
