--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -117,6 +117,17 @@
     </pluginRepositories>
     
     <dependencies>
+    
+    <dependency>
+    		<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>  
+ 			<version>2.2.4</version>
+ 		</dependency>
+ 		<dependency>
+    		<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2.4</version>
+ 		</dependency>
     	<!--  Dependency for SFTP File Transfer -->
 		<dependency>
 			<groupId>com.jcraft</groupId>
