--- a/OsceManager/src/main/resources/META-INF/spring/config.properties
+++ b/OsceManager/src/main/resources/META-INF/spring/config.properties
@@ -1,6 +1,15 @@
-#baseDir=e:/data/oscemanager
-baseDir=/var/local/osce/data
+baseDir=e:/data/oscemanager
+#baseDir=/var/local/osce/data
 url=https://localhost/iOSCEChecklistService?id=
 key=
 qrCodeWidth=400
 qrCodeHeight=400
+
+sftp.host=
+sftp.username=
+sftp.password=
+sftp.path=
+
+s3.bucketname=
+s3.accesskey=
+s3.secrectkey=
